# goaio

./: .gitignore  README.md  pyproject.toml
goaio/: __main__.py  app.py  ui.py
goaio/utils/: devicehandler.py  filehandler.py  loghandler.py  properties.py
