[tool.poetry]
name = "goaio"
version = "0.1.0"
description = ""
authors = ["Govardhan Ummadisetty <vardhank9@gmail.com>"]
readme = "README.md"
packages = [{include = "goaio"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
watchdog = "^4.0.1"

[tool.poetry.scripts]
goaio = "goaio:__main__"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
