[tool.poetry]
name = "goaio"
version = "0.1.0"
description = ""
authors = ["Govardhan Ummadisetty <vardhank9@gmail.com>"]
readme = "README.md"
packages = [{include = "goaio"}]

[tool.poetry.dependencies]
# added using poetry add --source pypi <package name>
python = "^3.10"
logging = {version = "^0.4.9.6", source = "pypi"}
streamlit = {version = "^1.35.0", source = "pypi"}
watchdog = {version = "^4.0.1", source = "pypi"}

[tool.poetry.scripts]
goaio = "goaio.app:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
